--- a/src/styles/modern-polychat.css
+++ b/src/styles/modern-polychat.css
@@ -90,6 +90,7 @@
   image-rendering: pixelated;
   image-rendering: -moz-crisp-edges;
   image-rendering: -webkit-optimize-contrast;
+  image-rendering: -webkit-optimize-contrast;
   image-rendering: crisp-edges;
 }
 
